Fixed Dark Mode styling for About page and changed gradients

--- a/src/styles/aboutpagecontent.scss
+++ b/src/styles/aboutpagecontent.scss
@@ -14,13 +14,22 @@
     text-align: center;
 }
 .header {
-    font-family:"Minecraftia", Arial, Helvetica, sans-serif;
+    font-family: "Minecraftia", Arial, Helvetica, sans-serif;
 }
 .description-title {
     opacity: 0.8;
 }
 .header-box {
-    background-image: url("../assets/backgrounds/noise.png");
+    background: linear-gradient(
+        180deg,
+        #a3b7f8,
+        #a2b6f8,
+        #9cb2f7,
+        #8ca5f4,
+        #7c99f1,
+        #7695f0,
+        #7594f0
+    ); /* made at https://learnui.design/tools/gradient-generator.html */
     padding: 10em;
     color: white;
     filter: saturate(3);
@@ -30,9 +39,10 @@
     padding: 1em;
     background-color: var(--container-background);
 }
-
 .paragraph-section {
     font-family: "Minecraftia", Arial, Helvetica, sans-serif;
     font-size: x-large;
-    
+}
+.dark-mode {
+    color: black;
 }
