--- a/src/styles/contributors.scss
+++ b/src/styles/contributors.scss
@@ -31,16 +31,18 @@
     .lazyload-wrapper {
         width: 100%;
         display: grid;
-        gap: 0.8em;
-        width: 90vw;
-        max-width: 80em;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-        font-size: 2vw;
+        gap: 0.5em;
+        width: 55rem;
+        max-width: 60em;
+        font-size: 1em;
 
         * {
             text-decoration: none;
         }
 
+        @media (min-width: 100px) {
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        }
     }
 
     background-color: #fae279;
@@ -53,10 +55,12 @@ Card {
 .big-text {
     font-size: xx-large;
     font-weight: bold;
+    font-family: "Minecraftia", Arial, Helvetica, sans-serif;
 }
 
 .smol-text {
     font-size: 1em;
+    margin-bottom: 1em;
 }
 
 .card-username {
